--- a/views/instructor/inner-course-header.ejs
+++ b/views/instructor/inner-course-header.ejs
@@ -16,4 +16,6 @@
       </div>
     </div>
   </div>
+  <a class="returnToHome" href="/instructor/<%= user._id %>/"><i class="fa-solid fa-hand-point-left"></i> Return to home
+    page</a>
 </section>
