--- a/views/instructor/nav.ejs
+++ b/views/instructor/nav.ejs
@@ -18,7 +18,7 @@
       <div class="list" id="list">
         <ul>
           <li>
-            <a href="/instructor/<% user._id %>/settings"
+            <a href="/instructor/<%= user._id %>/settings"
               >Manage your account</a
             >
           </li>
