--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" type="image/x-icon" href="/img/logos/DSK-JF-logo.png" />
     <!-- font-awesome -->
     <link
       rel="stylesheet"
@@ -25,11 +24,338 @@
     <link rel="stylesheet" href="/css/admin/users.css" />
     <title>Admin-Users</title>
   </head>
-  <body data-userid="<%= user._id %>">
+
+  <body>
     <%- include("./nav.ejs") %>
     <main>
-      <h1>Users</h1>
-      <p>Welcome admin</p>
+      <header>
+        <h1>Users</h1>
+        <button class="new-user btn" id="newUserBtn">+ New User</button>
+        <section class="add-new-user" id="addNewUser">
+          <p style="color: red" id="error"></p>
+          <form id="form">
+            <div>
+              <label for="firstName">First Name : </label>
+              <input type="text" id="firstName" name="firstName" />
+            </div>
+            <div>
+              <label for="lastName">Last Name : </label>
+              <input type="text" id="lastName" name="lastName" />
+            </div>
+            <div>
+              <label for="username">Username : </label>
+              <input type="text" id="username" name="username" />
+            </div>
+            <div>
+              <label for="email">Email : </label>
+              <input type="text" id="email" name="email" />
+            </div>
+            <div>
+              <label for="password">Password : </label>
+              <input type="password" id="password" name="password" />
+            </div>
+            <div class="role">
+              <div>
+                <input type="radio" id="student" name="role" value="Student" />
+                <label for="student">Student</label>
+              </div>
+              <div>
+                <input
+                  checked
+                  type="radio"
+                  id="instructor"
+                  name="role"
+                  value="Instructor"
+                />
+                <label for="instructor">Instructor</label><br />
+              </div>
+              <div>
+                <input
+                  type="radio"
+                  id="teachingAssistant"
+                  name="role"
+                  value="Teaching Assistant"
+                />
+                <label for="teachingAssistant">Teaching Assistant</label>
+              </div>
+            </div>
+            <div>
+              <button class="btn" id="submit">Submit</button>
+            </div>
+          </form>
+        </section>
+      </header>
+      <section>
+        <% if (users.length) {%>
+        <table>
+          <tr>
+            <th colspan="5">
+              <div class="search">
+                <i class="fas fa-search"></i>
+                <input
+                  type="text"
+                  name="search"
+                  id="search"
+                  placeholder="Search users ..."
+                />
+              </div>
+            </th>
+            <th>
+              <button class="filter">
+                <i class="fa-solid fa-filter"></i>
+              </button>
+            </th>
+          </tr>
+
+          <tr>
+            <th></th>
+            <th>Name</th>
+            <th>Role</th>
+            <th>Email</th>
+            <th>Status</th>
+            <th></th>
+          </tr>
+
+          <% users.forEach(item=> { if(item.role !== "admin"){%>
+          <tr class="user" id="user">
+            <td>
+              <input type="checkbox" class="checkbox" />
+              <div class="right-and-wrong" style="display: none">
+                <i
+                  class="fa-solid fa-check"
+                  style="color: green; cursor: pointer"
+                ></i>
+                <i
+                  class="fa-solid fa-xmark"
+                  style="color: red; cursor: pointer"
+                ></i>
+              </div>
+            </td>
+            <td>
+              <div class="container">
+                <img src="<%= item.profilePic %>" alt="profile picture" />
+                <input type="text" value="<%= item.firstName +" "+ item.lastName
+                %>" readonly />
+              </div>
+            </td>
+            <td><input type="text" value="<%= item.role %>" readonly /></td>
+            <td>
+              <input type="text" name="email" value="<%= item.email || "-" %>"
+              readonly />
+            </td>
+            <td class="<%= item.isBanned ? `banned` : `active` %>">
+              <span><%- item.isBanned ? "Baned" : "Active" %></span>
+            </td>
+            <td style="position: relative">
+              <button class="dots btn">
+                <i class="fa-solid fa-ellipsis-vertical"></i>
+              </button>
+              <div class="options">
+                <ul data-userid="<%= item._id %>">
+                  <li>
+                    <button><i class="fa-solid fa-message"></i> Message</button>
+                  </li>
+                  <li>
+                    <button class="editbtn">
+                      <i class="fa-solid fa-pencil edit"></i> Edit
+                    </button>
+                  </li>
+                  <li>
+                    <button class="removebtn">
+                      <i class="fa-solid fa-trash delete"></i>
+                      Remove
+                    </button>
+                  </li>
+                  <li>
+                    <button class="banbtn">
+                      <i class="fa-solid fa-ban ban"></i>
+                      <span><%- item.isBanned ? "unban" : "Ban" %></span>
+                    </button>
+                  </li>
+                </ul>
+              </div>
+            </td>
+          </tr>
+          <%}}); %>
+        </table>
+      </section>
+      <% } else { %>
+      <p class="no-data">No data found!</p>
+      <% } %>
+      <div class="pagination">
+        <ul>
+          <% const number=Math.ceil(usersLength / usersPerPage) || 0 %>
+          <%for(let i=0; i < number; i++) { %>
+          <li><a value="<%=i+1 %>" href="users?p=<%=i %>"> <%=i+1 %> </a></li>
+          <% } %>
+        </ul>
+      </div>
     </main>
+
+    <!-- add new user button  -->
+    <script>
+      const menu = document.getElementById("addNewUser");
+      const newUserBtn = document.getElementById("newUserBtn");
+
+      newUserBtn.addEventListener("click", () => {
+        menu.classList.toggle("activee");
+      });
+
+      document.addEventListener("dblclick", function (e) {
+        if (
+          menu.classList.contains("activee") &&
+          !menu.contains(e.target) &&
+          !newUserBtn.contains(e.target)
+        ) {
+          menu.classList.remove("activee");
+          document.getElementById("form").reset();
+        }
+      });
+    </script>
+
+    <!-- create new user  -->
+    <script type="module">
+      import { validateForm } from "/js/formValidation.js";
+      const form = document.getElementById("form");
+      const error = document.getElementById("error");
+
+      form.addEventListener("submit", async (e) => {
+        e.preventDefault();
+        error.style.color = "red";
+        const errorMsg = validateForm(form);
+        if (errorMsg) return (error.innerHTML = errorMsg);
+
+        try {
+          const res = await fetch("/signup", {
+            method: "POST",
+            headers: { "Content-Type": "application/json" },
+            body: JSON.stringify({
+              role: document.querySelector('input[name="role"]:checked').value,
+              firstName: document.getElementById("firstName").value,
+              lastName: document.getElementById("lastName").value,
+              username: document.getElementById("username").value,
+              email: document.getElementById("email").value,
+              password: document.getElementById("password").value,
+              gpa: 0,
+              createdByAdmin: 1,
+            }),
+          });
+
+          const data = await res.json();
+
+          if (data.errMsg) error.innerHTML = data.errMsg;
+          else if (data.user) {
+            error.style.color = "green";
+            error.innerHTML = "Added";
+            location.reload();
+          }
+        } catch (err) {
+          console.log(err);
+        }
+      });
+    </script>
+    <!-- dots -->
+    <script>
+      const dots = document.getElementsByClassName("dots");
+
+      Array.from(dots).forEach((dotaya) => {
+        dotaya.addEventListener("click", (e) => {
+          const options = dotaya.nextElementSibling;
+          options.classList.toggle("showList");
+        });
+      });
+
+      document.addEventListener("click", (e) => {
+        Array.from(dots).forEach((dotaya) => {
+          if (!dotaya.contains(e.target)) {
+            const options = dotaya.nextElementSibling;
+            options.classList.remove("showList");
+          }
+        });
+      });
+    </script>
+    <!-- ban btn  -->
+    <script>
+      const banbtn = document.getElementsByClassName("banbtn");
+
+      Array.from(banbtn).forEach((b) => {
+        b.addEventListener("click", async (e) => {
+          const userid = b.parentElement.parentElement.dataset.userid;
+          try {
+            const res = await fetch(`/admin/users/ban/${userid}`, {
+              method: "PUT",
+            });
+            const data = await res.json();
+            if (data.msg) location.reload();
+          } catch (err) {
+            console.log(err);
+          }
+        });
+      });
+    </script>
+    <!-- remove btn  -->
+    <script>
+      const removebtn = document.getElementsByClassName("removebtn");
+
+      Array.from(removebtn).forEach((b) => {
+        b.addEventListener("click", async (e) => {
+          const userid = b.parentElement.parentElement.dataset.userid;
+          try {
+            const res = await fetch(`/admin/users/delete/${userid}`, {
+              method: "DELETE",
+            });
+            const data = await res.json();
+            if (data.msg) {
+              Toastify({
+                text: "removed Successfully",
+                duration: 3000,
+                gravity: "top",
+                close: false,
+                backgroundColor: "red",
+              }).showToast();
+              location.reload();
+            }
+          } catch (err) {
+            console.log(err);
+          }
+        });
+      });
+    </script>
+    <!-- edit btn  -->
+    <script>
+      const Xs = document.getElementsByClassName("fa-xmark");
+      Array.from(Xs).forEach((x) => {
+        x.addEventListener("click", () => {
+          location.reload();
+        });
+      });
+
+      const Cs = document.getElementsByClassName("fa-check");
+      Array.from(Cs).forEach((c) => {
+        c.addEventListener("click", () => {
+          const user = c.parentElement.parentElement.parentElement;
+          const newEmail = user.querySelector([]);
+          console.log(newEmail);
+        });
+      });
+
+      const editbtn = document.getElementsByClassName("editbtn");
+
+      Array.from(editbtn).forEach((b) => {
+        b.addEventListener("click", async (e) => {
+          const userid = b.parentElement.parentElement.dataset.userid;
+          const user =
+            b.parentElement.parentElement.parentElement.parentElement
+              .parentElement;
+
+          user.querySelector(".right-and-wrong").style.display = "block";
+          user.querySelector(".checkbox").style.display = "none";
+          user.querySelectorAll("input").forEach((i) => {
+            i.classList.add("edite-input");
+            i.readOnly = false;
+          });
+        });
+      });
+    </script>
   </body>
 </html>
