--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -12,6 +12,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" />
     <!-- toastify -->
     <link
       rel="stylesheet"
@@ -22,6 +24,7 @@
     <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/admin/nav.css" />
     <link rel="stylesheet" href="/css/admin/users.css" />
+    <link rel="stylesheet" href="/css/chatGPT.css" />
     <title>Admin-Users</title>
   </head>
 
@@ -190,6 +193,7 @@
           <% } %>
         </ul>
       </div>
+      <%- include("../chatGPT.ejs") %>
     </main>
 
     <!-- add new user button  -->
