--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -13,9 +13,12 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" />
     <!-- style sheets  -->
     <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/admin/nav.css" />
+    <link rel="stylesheet" href="/css/chatGPT.css" />
     <title>Admin-Dashboard</title>
   </head>
   <body data-userid="<%= user._id %>">
@@ -23,6 +26,7 @@
     <main>
       <h1>Admin Dashboard</h1>
       <p>Welcome admin</p>
+      <%- include("../chatGPT.ejs") %>
     </main>
   </body>
 </html>
