--- a/views/admin/notifications.ejs
+++ b/views/admin/notifications.ejs
@@ -13,6 +13,8 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/material-design-icons/3.0.1/iconfont/material-icons.min.css" />
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
@@ -30,6 +32,7 @@
     <link rel="stylesheet" href="/css/general.css" />
     <link rel="stylesheet" href="/css/admin/nav.css" />
     <link rel="stylesheet" href="/css/admin/notifications.css" />
+    <link rel="stylesheet" href="/css/chatGPT.css" />
     <title>Notifications</title>
   </head>
   <body data-userid="<%= user._id %>">
@@ -84,6 +87,7 @@
           </div>
         </div>
       </div>
+      <%- include("../chatGPT.ejs") %>
     </main>
   </body>
 </html>
