--- a/views/student/nav.ejs
+++ b/views/student/nav.ejs
@@ -8,11 +8,9 @@
           <li><a href="/student">Home</a></li>
           <li><a href="/student/courses">Courses</a></li>
           <li class="dropdown">
-            <a href="" class="dropbtn"
-              >My Courses <i class="fas fa-caret-down"></i
-            ></a>
+            <a href="" class="dropbtn">My Courses <i class="fas fa-caret-down"></i></a>
             <div class="dropdown-content">
-              <a href="">Course 1</a>
+              <a href="<%= user._id %>/courseInner">Course 1</a>
               <a href="#">Course 2</a>
               <a href="#">Course 3</a>
             </div>
@@ -28,12 +26,7 @@
         <!-- Replace with your notifications icon -->
       </div>
       <div class="profile">
-        <img
-          src="/img/defaultPP.png"
-          alt="user image"
-          onclick="showMenu()"
-          id="profilePic"
-        />
+        <img src="/img/defaultPP.png" alt="user image" onclick="showMenu()" id="profilePic" />
         <div class="list" id="profileMenu">
           <ul>
             <li><a href="/student/settings">Manage your account</a></li>
