--- a/views/admin/courseInner.ejs
+++ b/views/admin/courseInner.ejs
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>student / CourseInner</title>
     <!-- font-awesome -->
-     <link
+    <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
     />
@@ -16,10 +16,14 @@
       integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
-    /> 
-    <link rel="stylesheet" href="/css/student/innercourse.css">
-    <link rel="stylesheet" href="/css/student/home.css">
-    
+    />
+    <link rel="stylesheet" href="/css/admin/nav.css" />
+    <link rel="stylesheet" href="/css/admin/couresInner.css" />
+
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -29,120 +33,42 @@
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
-    /> 
- 
+    />
+
     <script
       src="https://kit.fontawesome.com/0b0cd0c012.js"
       crossorigin="anonymous"
-    ></script> 
+    ></script>
   </head>
   <body>
-    <header>
-      <!-- Navigation -->
-      <%- include("./nav.ejs") %>
-            <!-- Title section -->
-      <section id="about-home">
-        <h2>Enroll Our Popular Courses And Skill Up</h2>
-      </section>
-    </header>
+    <%- include("./nav.ejs") %>
     <main>
       <section id="course-inner">
-        <!-- Left section -->
-
         <div class="overview">
-          <img class="course-img" src="img/courses/c1.jpg" alt="" />
+          <img class="course-img" src="<%= course.coverPic %>" alt="" />
           <div class="course-head">
             <div class="c-name">
-              <h2>Course 1</h2>
-              <div class="star">
-                <i class="fa-regular fa-star"></i>
-                <i class="fa-regular fa-star"></i>
-                <i class="fa-regular fa-star"></i>
-                <i class="fa-regular fa-star"></i>
-                <i class="fa-regular fa-star"></i>
-              </div>
+              <h2><%= course.title %></h2>
               <p>
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum
-                quis possimus molestiae, voluptate recusandae maiores.
+                Numbers of studnets Enrolled : <%= course.numberOfStudents%>
               </p>
             </div>
-            <span>$49.99</span>
           </div>
-
-          <!-- Instructor section -->
           <section>
             <h3>Instructor</h3>
             <div class="tutor">
-              <!-- professor img  -->
-              <img src="img/courses/tutor.jpg" alt="" />
+              <img src="<%= instructor.profilePic %>" alt="" />
               <div class="tutor-det">
-                <h5>John Doe</h5>
+                <h5><%= instructor.firstName %> <%= instructor.lastName %></h5>
                 <p>Web Developer At Google</p>
               </div>
             </div>
           </section>
-
-          <!-- Course detail section -->
           <section>
             <h3>Course Overview</h3>
-            <p>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officia
-              eveniet itaque ducimus id cum voluptas repellendus nulla,
-              repellat, nostrum quas error sequi dolores fugiat, eius ipsa
-              assumenda dolore. Ab, nobis.Lorem ipsum, dolor sit amet
-              consectetur adipisicing elit. Officia eveniet itaque ducimus id
-              cum voluptas repellendus nulla, repellat, nostrum quas error sequi
-              dolores fugiat, eius ipsa assumenda dolore. Ab, nobis. Lorem
-              ipsum, dolor sit amet consectetur adipisicing elit. Officia
-              eveniet itaque ducimus id cum voluptas repellendus nulla,
-              repellat, nostrum quas error sequi dolores fugiat, eius ipsa
-              assumenda dolore. Ab, nobis.Lorem ipsum, dolor sit amet
-              consectetur adipisicing elit. Officia eveniet itaque ducimus id
-              cum voluptas repellendus nulla, repellat, nostrum quas error sequi
-              dolores fugiat, eius ipsa assumenda dolore. Ab, nobis.Lorem ipsum,
-              dolor sit amet consectetur adipisicing elit. Officia eveniet
-              itaque ducimus id cum voluptas repellendus nulla, repellat,
-              nostrum quas error sequi dolores fugiat, eius ipsa assumenda
-              dolore. Ab, nobis.Lorem ipsum, dolor sit amet consectetur
-              adipisicing elit. Officia eveniet itaque ducimus id cum voluptas
-              repellendus nulla, repellat, nostrum quas error sequi dolores
-              fugiat, eius ipsa assumenda dolore. Ab, nobis.
-            </p>
-          </section>
-          <hr />
-          <!-- What you'll Learn section -->
-          <section>
-            <h3>What you'll Learn</h3>
-            <div class="learn">
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-              <p>
-                <i class="far fa-check-circle"></i> Lorem ipsum, dolor sit amet
-                consectetur adipisicing elit.
-              </p>
-            </div>
+            <p><%= course.description %></p>
           </section>
         </div>
-
-        <!-- Left section -->
         <section>
           <div class="enroll">
             <h3>This course includes:</h3>
@@ -153,11 +79,10 @@
             </p>
             <p><i class="fa-solid fa-infinity"></i>Full Lifetime access</p>
             <p>
-              <i class="fa-solid fa-mobile-screen-button"></i> access on mobile
-              and TV
+              <i class="fa-solid fa-mobile"></i> access on mobile application
             </p>
             <p><i class="fa-solid fa-paperclip"></i> Assignments</p>
-            <p><i class="fa-solid fa-trophy"></i>Certificate of completion</p>
+            <p><i class="fa-solid fa-award"></i>Certificate of completion</p>
             <div class="enroll-btn">
               <a class="blue" href="#">Enroll Course</a>
             </div>
@@ -165,5 +90,5 @@
         </section>
       </section>
     </main>
-  </body>
+  </body>
 </html>
